--- a/FuelDump.cfg
+++ b/FuelDump.cfg
@@ -2,12 +2,25 @@
 CONTRACT_TYPE
 {
     name = Fuel Supply
-  
-    title = Fuel depot
-    description = Establish a fuel depot to allow for continued exploration of <target>
-    Synopsis = Deliver fuel to <target>
+    title = Bring fuel to @/targetbody1
+    generictitle = get more fuel
+    Group = arcane
+    description = Establish a fuel depot to allow for continued exploration of @/targetbody1 it's most certainly not becuase we forgot to top off before leaving Kerbin
+    genericdiscription = Bring more fuel to @/targetbody1
+    Synopsis = Deliver fuel to @/targetvessel1
     completedMessage = You have successfully deliver the fuel for follow on operations
-  
+    minExpiry = 100.0
+    maxExpiry = 200.0
+    Deadline = 3650
+    cancellable = true
+    declineable = true
+    rewardScience = Random (5.0, 25.0)
+    rewardReputation = Random (1, 10.0)
+    Rewardfunds = Random (150000, 500000)
+    failureReputation = Random (1, 15.0)
+    failureFunds = Random (50000, 100000)
+    advancefunds = Random (25000, 75000)
+    targetbody = @/targetbody1
     maxsimultaneous = 1
   
   PARAMETER
