--- a/FuelDump.cfg
+++ b/FuelDump.cfg
@@ -1,14 +1,16 @@
-// Initial design for fuel depot supply
+// Initial design for fuel depot supply - this is a liquid fuel and oxidizer only mission
+
+// contract type info is mostly standard
 CONTRACT_TYPE
 {
     name = Fuel Supply
     title = Bring fuel to @/targetbody1
     generictitle = get more fuel
-    Group = arcane
-    description = Establish a fuel depot to allow for continued exploration of @/targetbody1 it's most certainly not becuase we forgot to top off before leaving Kerbin
+    Group = logi
+    description = Establish a fuel depot to allow for continued exploration of @/targetbody1 , it's most certainly not becuase we forgot to top off before leaving Kerbin! 
     genericdiscription = Bring more fuel to @/targetbody1
     Synopsis = Deliver fuel to @/targetvessel1
-    completedMessage = You have successfully deliver the fuel for follow on operations
+    completedMessage = hey you didnt happen to bring any extra movies or books did you?
     minExpiry = 100.0
     maxExpiry = 200.0
     Deadline = 3650
@@ -28,3 +30,4 @@ CONTRACT_TYPE
       name = 
       type = 
  }
+// oxidiser = fuel/9*11
